HighContrast: Make sure selections are visible in infobars
Pointed out in https://bugzilla.gnome.org/show_bug.cgi?id=745622

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2105,6 +2105,11 @@ GtkInfoBar {
     &:backdrop { @include button(backdrop, $selected_bg_color, $selected_fg_color, $edge: none); }
     &:backdrop:insensitive { @include button(backdrop-insensitive, $selected_bg_color, $selected_fg_color, $edge: none); }
   }
+  .label:selected,
+  .label:selected:focus,
+  .label:selected:hover {
+    background-color: lighten($selected_bg_color, 20%);
+  }
 }
 
 /************
